2001-02-27  Tambet Ingo  <tambet@ximian.com>

	* boot-conf.in (set_immediate): New function, we didn't actually run lilo before.

2001-02-26  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in (xml_parse_dialing): set the file item if none came from the XML.
	* network.pl.in (xst_network_rh62_get_file, xst_network_get_file): check the file
	  name for any given distro. The corresponding sysconfig file for rh62.
	
2001-02-26  Tambet Ingo  <tambet@ximian.com>

	* boot-conf.in (xml_parse_image): get text (not word).

	* boot.pl.in (xst_boot_conf_replace_image): Fixed bug that sometimes didn't write
	type. Don't scan to the end of file if everything is done already. 

2001-02-25  Hans Petter Jansson  <hpj@ximian.com>

	* general.pl.in (xst_begin): Don't break if platform unknown -
	  let xst_platform_ensure_supported () handle that.

	* platform.pl.in (xst_platform_ensure_supported): Make
	  unknown-platform and unsupported-platform scenarios similar.

2001-02-24  Arturo Espinosa  <arturo@ximian.com>

	* network.pl.in: peerdns support.
	* util.pl.in (xst_util_struct_eq): oops, forgot to rename inner calls.
	
2001-02-24  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in (xml_print): cosmetic changes.
	* network.pl.in (xst_network_rh62_interface_set_by_dev,
	xst_network_rh62_interface_set) better criterion for device activation.
	* network.pl.in: chap support, lots of bug fixes to activation stuff.
	* util.pl.in (xst_util_struct_eq): renamed from cmp due to different semantic.
	
2001-02-23  Hans Petter Jansson  <hpj@ximian.com>

	* file.pl.in (xst_file_get_base_path): Implement.
	  (xst_file_get_tmp_path): Implement.
	  (xst_file_get_backup_path): Implement.
	  (xst_backup_file): Use xst_file_get_backup_path.
	  (xst_open_filter_write_from_names): Use xst_file_get_tmp_path.

2001-02-23  Arturo Espinosa  <arturo@ximian.com>

	* replace.pl.in (xst_replace_sh): surround by quotes after escaping.
	
2001-02-23  Arturo Espinosa  <arturo@ximian.com>
