@@ -1,3 +1,7 @@
+2001-02-26  Chema Celorio  <chema@celorio.com>
+
+	* Makefile.am (perl_libs): remove be.pl
+
 2001-02-27  Tambet Ingo  <tambet@ximian.com>
 
 	* boot-conf.in (set_immediate): New function, we didn't actually run lilo before.
